<resources>
    <string name="app_name">Market Place One Group</string>
    <string name="et_name">NAME</string>
    <string name="et_lastname">LASTNAME</string>
    <string name="et_email">EMAIL</string>
    <string name="et_password">PASSWORD</string>
    <string name="btn_register">REGISTER</string>
    <string name="cb_accept">I accept terms and conditions</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_accept">ACCEPT</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_shopping">Shopping Cart</string>
    <string name="new_product">New Product</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>