<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.juanpimiento.proyecto.ui.home.HomeFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.juanpimiento.proyecto.ui.gallery.GalleryFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.juanpimiento.proyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_shopping"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_newproduct"
        android:name="com.juanpimiento.proyecto.ui.newproduct.RegisterProductFragment"
        android:label="@string/new_product"
        tools:layout="@layout/fragment_register_product" />
</navigation>