<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:hint="@string/et_name"></TextView>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:hint="@string/et_lastname"></TextView>

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:hint="@string/et_email"></TextView>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:hint="@string/et_password"></TextView>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_term"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"></CheckBox>

            <TextView
                android:id="@+id/tv_term"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:hint="@string/cb_accept"
                android:gravity="center_vertical"></TextView>


        </LinearLayout>

<!--        <CheckBox-->
<!--            android:id="@+id/chk_term"-->
<!--            android:layout_width="35dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:hint="@string/cb_accept"></CheckBox>-->

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/btn_register"

            />

    </LinearLayout>


</LinearLayout>